--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,13 @@ html {
 body {
     background-color: rgb(245, 131, 197);
 }
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 p {
     font-size: 20px;
 }
